syntax = 'proto3';

option go_package = '/grpc';

package task.v1;

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc ChangeStatus(ChangeStatusRequest) returns (ChangeStatusResponse) {}
}

message Task {
  uint32 id = 1;
  string title = 2;
  string description = 3;
  string due_date = 4;
  bool completed = 5;
  uint32 user_id = 6;
  string status = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string due_date = 3;
  string status = 4;
  uint32 user_id = 5;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  uint32 id = 1;
  uint32 user_id = 2;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
  string title = 1;
  string due_date_from = 2;
  string due_date_to = 3;
  optional bool completed = 4;
  optional uint32 user_id = 5;
  string status = 6;
  string created_at_from = 7;
  string created_at_to = 8;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string due_date = 4;
  optional bool completed = 5;
  optional string status = 6;
  optional uint32 user_id = 7;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {}

message ChangeStatusRequest {
  string id = 1;
  string status = 2;
}

message ChangeStatusResponse {
  Task task = 1;
}